@@ -1,5 +1,6 @@
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-hints-0.6.0.3.ebuild 245 RMD160 1bc99043b1488865dafe6baf4903fc3d25790944 SHA1 3427f99effcf4dc940e5e00cac3784cbbfdc3d6c SHA256 f856e64ce6bb8010211f08358cf7098ad07721d2985100cfc14262bcfa907937
-EBUILD kadu-hints-0.6.5.ebuild 209 RMD160 a504b0cbb7dbee3b42e18ff1b62309fa56b418ec SHA1 e46d566aada6268915c82fc99852e630fb59bcfd SHA256 f10205f423c1165881473520febc0ba1f3bbc08a5ccd5e37a518a6c4cf1ad38f
-MISC ChangeLog 862 RMD160 9656c835995a30b286340c40d136fe26a5be5607 SHA1 0280ffc20c7e87f0397eab9b343b1ad8f7f77249 SHA256 65cc04c6a665c376865bb6a7fe5c0042d635839347b0422315b7c64a4911026d
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-hints-0.6.0.3.ebuild 375 RMD160 eb92d6e62dce635540c32857c0ca8a94d6992687 SHA1 732cecb8e08504a0bef43885940b640761f68cd5 SHA256 fe7cdabf0cdcbd4ab9abd0d6ca1b711b4acc7e89691f79301f04381fef81c9b1
+EBUILD kadu-hints-0.6.5.1.ebuild 304 RMD160 4234fdf58c7c8e7e2622199bf5e49870975c6e16 SHA1 7bebf9b0ce5d9d5cdee17a5e31e7935315738858 SHA256 8bbbad0fae49df2f6db36a10181dc82d21e2067c636e4f69d5bf305dee3beb46
+MISC ChangeLog 1066 RMD160 43444e931b0ca67fab8ae22dcc706e425e185692 SHA1 0a326ff32e5f8d85004d1bae2fe63ef770eea1c4 SHA256 00b59e94b88d6d7fe74350f807ae08fbab4d99f00140b6d33f1258c295e6d5bf
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
