@@ -1,15 +1,0 @@
-#
-# PACKAGE INFORMATION
-#
-
-inherit kadu-base
-
-MOD_DEPEND="~net-im/kadu-notify-${PV}"
-
-inherit kadu-mod
-
-DESCRIPTION="Hint notification module for Kadu"
-HOMEPAGE="http://kadu.net"
-KEYWORDS="amd64 x86"
-IUSE=""
-
